--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,6 +11,7 @@ home:
   tagline: Healing power of Sound & Music
 blog:
   readmore: read more
+  findoutmore: find out more
   by: by
   next: next blogpost
   previous: previous blogpost
@@ -24,3 +25,4 @@ contact:
 footer:
   findus: You can find us on any of these platforms.
   copyright: Copyright ©
+tickets: Tickets
