content components & cypress

--- a/content/blog/3. releaseyourinnerdancer.md
+++ b/content/blog/3. releaseyourinnerdancer.md
@@ -20,7 +20,7 @@ Het thema van de sessie op 3 september is "Release your Inner Dancer". We nodige
 
 Inschrijven kan door een bericht te sturen naar Wouter via het [contact formulier](/nl/contact), met vermelding van het aantal personen. Breng gerust vrienden of vriendinnen mee die hier ook zin in hebben.<br/>
 
-["Release your Inner Dancer" evenement op <FontAwesomeIcon :icon="['fab', 'facebook']" class="hover:text-gray-800 text-gray-500 text-lg" />](https://www.facebook.com/events/351637197012556)
+["Release your Inner Dancer" evenement op :icon{name=bi:facebook}](<https://www.facebook.com/events/351637197012556>)
 
 ### Praktische gegevens
 
@@ -35,10 +35,6 @@ Inschrijven kan door een bericht te sturen naar Wouter via het [contact formulie
 * We raden aan te dansen op blote voeten
 * Er wordt niet gepraat terwijl we dansen
 * Geen alcohol, sigaretten of andere middelen
-
-### De locatie: KrimpVarkie Huisi, Haaltert
-
-<image-gallery folder="blog/releaseyourinnerdancer/gallery" />
 
 ### Adres
 
@@ -58,3 +54,7 @@ Aan de kapel sla je links in de brantegemstraat tot voorbij huisnummer 5 (50m).
 Daar zie je een bordje (zie foto hierboven) en een pad richting Krimpvarki Huisi.
 
 U heeft uw bestemming bereikt.
+
+### De locatie: KrimpVarkie Huisi, Haaltert
+
+::ImageGallery{folder="blog/releaseyourinnerdancer/gallery"}
