--- a/content/blog/4. foli.md
+++ b/content/blog/4. foli.md
@@ -17,4 +17,4 @@ hoe essentieel het is.”
 
 Een uitstekende film van Thomas Roebers en Floris Leeuwenberg:
 
-<iframe-component title="FOLI (there is no movement without rhythm) original version by Thomas Roebers and Floris Leeuwenberg" src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"/>
+::IframeComponent{src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"}
