--- a/content/en/blog/3. releaseyourinnerdancer.md
+++ b/content/en/blog/3. releaseyourinnerdancer.md
@@ -20,7 +20,7 @@ The theme of the session on September 3rd is "Release your Inner Dancer". We inv
 
 You can register by sending a message to Wouter using the [contact form](/en/contact), stating the number of people. Feel free to bring friends or girlfriends who might enjoy this dance as well.
 
-["Release your Inner Dancer" event on <FontAwesomeIcon :icon="['fab', 'facebook']" class="hover:text-gray-800 text-gray-500 text-lg" />](https://www.facebook.com/events/351637197012556)
+["Release your Inner Dancer" event on :icon{name=bi:facebook}](https://www.facebook.com/events/351637197012556)
 
 ### Practical information
 
@@ -35,10 +35,6 @@ You can register by sending a message to Wouter using the [contact form](/en/con
 * We recommend to dance barefoot
 * No talking during the dance
 * No alcohol, cigarettes or other substances
-
-### The location: KrimpVarkie Huisi, Haalter
-
-<image-gallery folder="blog/releaseyourinnerdancer/gallery" />
 
 ### Address
 
@@ -59,3 +55,7 @@ At the chapel, turn left into Brantegemstraat and walk past house number 5 (50m)
 There you will see a sign (see photo above) and a path towards Krimpvarki Huisi.
 
 You have reached your destination.
+
+### The location: KrimpVarkie Huisi, Haalter
+
+::ImageGallery{folder="blog/releaseyourinnerdancer/gallery"}
