--- a/content/en/blog/4. foli.md
+++ b/content/en/blog/4. foli.md
@@ -18,4 +18,4 @@ how essential it is.”
 
 An excellent movie by by Thomas Roebers and Floris Leeuwenberg:
 
-<iframe-component title="FOLI (there is no movement without rhythm) original version by Thomas Roebers and Floris Leeuwenberg" src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"/>
+::IframeComponent{src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"}
