--- a/content/blog/3. releaseyourinnerdancer.md
+++ b/content/blog/3. releaseyourinnerdancer.md
@@ -6,7 +6,7 @@ subtitle: Wanneer danste je laatst op blote voeten in het gras in de natuur?
 date: 08/23/2022
 author: Wouter Vernaillen
 image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.jpg
-thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-thumb.png
+thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.jpg
 ---
 
 ### Laat ons samen dansen op 3 september
