--- a/content/en/blog/3. releaseyourinnerdancer.md
+++ b/content/en/blog/3. releaseyourinnerdancer.md
@@ -5,8 +5,8 @@ show_subtitle: true
 subtitle: When was the last time you danced barefoot in the grass in nature?
 date: 08/23/2022
 author: Wouter Vernaillen
-image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.jpg
-thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-thumb.png
+image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
+thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 
 ### Let's dance together on September 3rd
