--- a/content/blog/3. releaseyourinnerdancer.md
+++ b/content/blog/3. releaseyourinnerdancer.md
@@ -1,5 +1,5 @@
 ---
-title: Release your Inner Dancer - 3 september
+title: Release your Inner Dancer - 3 september '22
 desc: Wanneer danste je laatst op blote voeten in het gras in de natuur?  Laat je innerlijke kind vrij en dans met ons mee op 3 september in Haaltert
 show_subtitle: true
 subtitle: Wanneer danste je laatst op blote voeten in het gras in de natuur?
@@ -8,6 +8,9 @@ author: Wouter Vernaillen
 image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
+
+**Edit:** dit evenement is reeds voorbij.<br>
+Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance){target="blank"}
 
 ### Laat ons samen dansen op 3 september
 
@@ -42,6 +45,8 @@ Krimpvarkie Huisi<br/>
 Brantegemstraat 5<br/>
 9450 Haaltert<br/>
 
+### De locatie: KrimpVarkie Huisi, Haaltert
+
 ### Parkeren
 
 Parkeren doe je best op de Keiberg. Er zijn parkeervakken langs de kant van de weg ter hoogte van huisnummers 23 tot 61.
@@ -54,7 +59,5 @@ Aan de kapel sla je links in de brantegemstraat tot voorbij huisnummer 5 (50m).
 Daar zie je een bordje (zie foto hierboven) en een pad richting Krimpvarki Huisi.
 
 U heeft uw bestemming bereikt.
-
-### De locatie: KrimpVarkie Huisi, Haaltert
 
 ::ImageGallery{folder="blog/releaseyourinnerdancer/gallery"}
