--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -11,7 +11,7 @@
         "trancedance": "Trance Dance",
         "blog": "Blog",
         "about": "About",
-        "newsletter": "Nieuwsbrief",
+        "newsletter": "Newsletter",
         "contact": "Contact"
     },
     "home": {
