trancedance page update

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -17,7 +17,7 @@
     "home": {
         "title": "Harmonics",
         "tagline": "Healing power of Sound, Music and Dance",
-        "services": "Ecstatic Dance, Trance Dance, Immersive Soundbaths, Music Production"
+        "services": "Trance Dance, Ecstatic Dance, Immersive Soundbaths, Music Production"
     },
     "blog": {
         "readmore": "read more",
