--- a/locales/nl-BE.json
+++ b/locales/nl-BE.json
@@ -17,7 +17,7 @@
     "home": {
         "title": "Harmonics",
         "tagline": "Genezende kracht van Geluid, Muziek en Dans",
-        "services": "Ecstatic Dance, Trance Dance, Immersive Soundbaths, Muziek Productie"
+        "services": "Trance Dance, Ecstatic Dance, Immersive Soundbaths, Muziek Productie"
     },
     "blog": {
         "readmore": "lees meer",
