added remark-breaks plugin

--- a/content/blog/3. releaseyourinnerdancer.md
+++ b/content/blog/3. releaseyourinnerdancer.md
@@ -9,19 +9,19 @@ image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 
-**Edit:** dit evenement is reeds voorbij.<br>
+**Edit:** dit evenement is reeds voorbij.
 Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance){target="blank"}
 
 ### Laat ons samen dansen op 3 september
 
 Diep vanbinnen hebben we allemaal de behoefte om uitbundig te mogen zijn, om ons innerlijke wildheid los te laten.
 
-We bieden daarom graag een plek en een moment aan waar het kind van 3 in ons eens opnieuw mag vrij zijn.<br/>
+We bieden daarom graag een plek en een moment aan waar het kind van 3 in ons eens opnieuw mag vrij zijn.
 Dit in de vorm van een [Ecstatic Dance](/nl/blog/watisecstaticdance) sessie, met de blote voeten in het gras, in de natuur. Een dansreisje waarbij we verbinding maken met ons innerlijke zelf, gewoon "mogen zijn", vrij bewegen en onze energie loslaten.
 
 Het thema van de sessie op 3 september is "Release your Inner Dancer". We nodigen uit om "los te laten", geleid door ritme en de kracht van muziek, op een veilige manier, zonder andere middelen om onze remmingen weg te nemen.
 
-Inschrijven kan door een bericht te sturen naar Wouter via het [contact formulier](/nl/contact), met vermelding van het aantal personen. Breng gerust vrienden of vriendinnen mee die hier ook zin in hebben.<br/>
+Inschrijven kan door een bericht te sturen naar Wouter via het [contact formulier](/nl/contact), met vermelding van het aantal personen. Breng gerust vrienden of vriendinnen mee die hier ook zin in hebben.
 
 ["Release your Inner Dancer" evenement op :icon{name=bi:facebook}](<https://www.facebook.com/events/351637197012556>)
 
@@ -41,9 +41,9 @@ Inschrijven kan door een bericht te sturen naar Wouter via het [contact formulie
 
 ### Adres
 
-Krimpvarkie Huisi<br/>
-Brantegemstraat 5<br/>
-9450 Haaltert<br/>
+Krimpvarkie Huisi
+Brantegemstraat 5
+9450 Haaltert
 
 ### De locatie: KrimpVarkie Huisi, Haaltert
 
@@ -53,11 +53,9 @@ Parkeren doe je best op de Keiberg. Er zijn parkeervakken langs de kant van de w
 In de gps kan je daarvoor bv Keiberg 35, Haaltert ingeven.
 
 Stap daarna richting het witte kapelletje onderaan de Keiberg (100m)
-
 Aan de kapel sla je links in de brantegemstraat tot voorbij huisnummer 5 (50m).
-
 Daar zie je een bordje (zie foto hierboven) en een pad richting Krimpvarki Huisi.
-
 U heeft uw bestemming bereikt.
 
 ::ImageGallery{folder="blog/releaseyourinnerdancer/gallery"}
+::
