--- a/content/en/blog/3. releaseyourinnerdancer.md
+++ b/content/en/blog/3. releaseyourinnerdancer.md
@@ -8,14 +8,14 @@ author: Wouter Vernaillen
 image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
-**Edit:** This event is over.<br>
+**Edit:** This event is over.
 You can listen here to the recorded DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance){target="blank"}
 
 ### Let's dance together on September 3rd
 
 Deep down we all have the need to be exuberant, to let go of our inner wildness.
 
-We would like to offer a place and a moment where the 3-year-old child in us can be free again.<br/>
+We would like to offer a place and a moment where the 3-year-old child in us can be free again.
 This in the form of an [Ecstatic Dance](/en/blog/watisecstaticdance) session, barefoot in the grass in nature. A dance trip where we connect with our inner self, just "may be", move freely and release our energy.
 
 The theme of the session on September 3rd is "Release your Inner Dancer". We invite you to "let go", guided by rhythm and the power of music, in a safe way, with no other means to remove our inhibitions.
@@ -40,9 +40,9 @@ You can register by sending a message to Wouter using the [contact form](/en/con
 
 ### Address
 
-Krimpvarkie Huisi<br/>
-Brantegemstraat 5<br/>
-9450 Haaltert<br/>
+Krimpvarkie Huisi
+Brantegemstraat 5
+9450 Haaltert
 
 ### Parking
 
@@ -51,13 +51,11 @@ There are parking spaces along the road between house numbers 23 to 61.
 In the gps you can add Keiberg 35, Haaltert, for example.
 
 Step towards the white chapel at the bottom of the Keiberg (100m)
-
 At the chapel, turn left into Brantegemstraat and walk past house number 5 (50m).
-
 There you will see a sign (see photo above) and a path towards Krimpvarki Huisi.
-
 You have reached your destination.
 
 ### The location: KrimpVarkie Huisi, Haalter
 
 ::ImageGallery{folder="blog/releaseyourinnerdancer/gallery"}
+::
