--- a/content/blog/4. foli.md
+++ b/content/blog/4. foli.md
@@ -7,14 +7,15 @@ author: Wouter Vernaillen
 thumbnail: /images/blog/foli.png
 ---
 
-”Het leven heeft een ritme, het is constant in beweging. Het woord voor ritme (gebruikt door de Malinke-stammen) is FOLI.<br/>
+”Het leven heeft een ritme, het is constant in beweging. Het woord voor ritme (gebruikt door de Malinke-stammen) is FOLI.
 Het is een woord dat zoveel meer omvat dan drummen, dansen of geluid.
 We vinden het terug in elk onderdeel van het dagelijks leven.
 
-In deze film hoor en voel je ritme niet alleen, maar zie je het ook.<br/>
+In deze film hoor en voel je ritme niet alleen, maar zie je het ook.
 Het is een buitengewone mix van beeld en geluid die de zintuigen voedt en ons allemaal herinnert
 hoe essentieel het is.”
 
 Een uitstekende film van Thomas Roebers en Floris Leeuwenberg:
 
 ::IframeComponent{src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"}
+::
