--- a/content/en/blog/4. foli.md
+++ b/content/en/blog/4. foli.md
@@ -8,14 +8,15 @@ thumbnail: /images/blog/foli.png
 ---
 
 “Life has a rhythm, it’s constantly moving.
-The word for rhythm ( used by the Malinke tribes ) is FOLI.<br/>
+The word for rhythm ( used by the Malinke tribes ) is FOLI.
 It is a word that encompasses so much more than drumming, dancing or sound.
 It’s found in every part of daily life.
 
-In this film you not only hear and feel rhythm but you see it.<br/>
+In this film you not only hear and feel rhythm but you see it.
 It’s an extraordinary blend of image and sound that feeds the senses and reminds us all
 how essential it is.”
 
 An excellent movie by by Thomas Roebers and Floris Leeuwenberg:
 
 ::IframeComponent{src="https://www.youtube.com/embed/lVPLIuBy9CY?feature=oembed"}
+::
