--- a/content/blog/3. releaseyourinnerdancer.md
+++ b/content/blog/3. releaseyourinnerdancer.md
@@ -10,7 +10,7 @@ thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash
 ---
 
 **Edit:** dit evenement is reeds voorbij.
-Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance){target="blank"}
+Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)
 
 ### Laat ons samen dansen op 3 september
 
