--- a/content/en/blog/3. releaseyourinnerdancer.md
+++ b/content/en/blog/3. releaseyourinnerdancer.md
@@ -9,7 +9,7 @@ image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 **Edit:** This event is over.
-You can listen here to the recorded DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance){target="blank"}
+You can listen here to the recorded DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)
 
 ### Let's dance together on September 3rd
 
