added published & last updated dates to content pages

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -45,5 +45,9 @@
         "firstname": "First Name",
         "subscribe": "Subscribe"
     },
+    "dates": {
+        "published": "published on",
+        "lastUpdated": "last edited on"
+    },
     "tickets": "Tickets"
 }
