--- a/content/en/news/5. trancedance23january2023.md
+++ b/content/en/news/5. trancedance23january2023.md
@@ -9,11 +9,11 @@ thumbnail: /images/fbevent-cover2.jpeg
 ---
 
 On January 23, we would like to invite you to strengthen your intentions for 2023 while dancing during a [Trance Dance](/en/trancedance) session at [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) in Melle.
-This session is the first in a series of monthly sessions and promises to be a beautiful co-creation with Rita, who also followed the [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) by Aernoudt Knecht in Germany.
+This session is the first in a series of monthly sessions and promises to be a beautiful co-creation of Rita and Wouter, who both followed the [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) by Aernoudt Knecht in Germany.
 
 Are you new to Trance Dance? Then you can find out more on our [Trance Dance page](/en/trancedance).
 
-You can reserve your spot on the [website of vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans). Places are limited, as we allow a maximum of 10 dancers.
+You can reserve your spot on the [website of vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans). Places are limited, so make sure to register in time.
 Are you unable to join this time, but want to stay informed of upcominh sessions, then subscribe to our [Harmonics newsletter](/en/news).
 
 Feel free to [contact Wouter](/en/contact) if you have any questions.
@@ -30,7 +30,8 @@ imageShadow: false
 * welcome from 6:30pm
 * opening circle by Rita at 7pm
 * next we start the trance dance, which takes 1 to 1,5 hour and is concluded with an integration moment
-* closing circle, which we finish the latest by 10pm
+* closing circle
+* we finish the latest by 10pm
 
 ## Bring your own
 * (yoga) cushion to sit (during the opening and closing circle)
