--- a/content/news/5. trancedance23january2023.md
+++ b/content/news/5. trancedance23january2023.md
@@ -9,11 +9,11 @@ thumbnail: /images/fbevent-cover2.jpeg
 ---
 
 Op 23 januari nodigen we jullie graag uit om je intenties voor 2023 al dansend kracht bij te zetten tijdens een [Trancedans](/trancedance) sessie bij [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) te Melle. 
-Dit is de eerste in een reeks van maandelijkse sessies en beloofd een mooie co-creatie te worden met Rita, die ook de [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) volgde bij Aernoudt Knecht in Duitsland.
+Dit is de eerste in een reeks van maandelijkse sessies en beloofd een mooie co-creatie te worden door Rita en Wouter, die samen de [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) volgden bij Aernoudt Knecht in Duitsland.
 
 Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
 
-Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans). Let op plaatsen zijn beperkt, want we laten maximum 10 dansers toe.
+Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans). Let op, de plaatsen zijn beperkt, dus schrijf je tijdig in.
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de [Harmonics nieuwsbrief](/news).
 
 Voor vragen kan je uiteraard steeds terecht bij [Wouter](/contact).
@@ -30,7 +30,8 @@ imageShadow: false
 * welkom vanaf 18u30
 * opening cirkel door Rita om 19u
 * aansluitend starten we de dans, deze duurt 1u tot 1,5u en wordt afgesloten met een integratiemoment
-* closing cirkel, deze ronden we af tegen ten laatste 22u
+* closing cirkel
+* we ronden af tegen ten laatste 22u
 
 ## Meebrengen
 * een (yoga) kussen om te zitten (tijdens de opening en closing cirkel)
