bring your blindfold

--- a/content/en/news/5. trancedance23january2023.md
+++ b/content/en/news/5. trancedance23january2023.md
@@ -34,6 +34,7 @@ imageShadow: false
 * we finish the latest by 10pm
 
 ## Bring your own
+* blindfold, best is dark, multi-layered fabric
 * (yoga) cushion to sit (during the opening and closing circle)
 * a blanket (integration moment after the dance)
 * bottle of water
