--- a/content/news/5. trancedance23january2023.md
+++ b/content/news/5. trancedance23january2023.md
@@ -34,6 +34,7 @@ imageShadow: false
 * we ronden af tegen ten laatste 22u
 
 ## Meebrengen
+* een blinddoek, best met meerdere donkere lagen stof
 * een (yoga) kussen om te zitten (tijdens de opening en closing cirkel)
 * een dekentje (tijdens integratie moment na de dans)
 * flesje water
