--- a/content/en/news/3. releaseyourinnerdancer.md
+++ b/content/en/news/3. releaseyourinnerdancer.md
@@ -5,6 +5,7 @@ subtitle: When was the last time you danced barefoot in the grass in nature?
 date: 08/23/2022
 author: Wouter Vernaillen
 image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
+imageSizes: sm:100vw xl:1600px
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 **Edit:** This event is over.
