--- a/content/news/3. releaseyourinnerdancer.md
+++ b/content/news/3. releaseyourinnerdancer.md
@@ -5,6 +5,7 @@ subtitle: Wanneer danste je laatst op blote voeten in het gras in de natuur?
 date: 08/23/2022
 author: Wouter Vernaillen
 image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
+imageSizes: sm:100vw xl:1600px
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 
