fix date formats

--- a/content/en/news/5. trancedance23january2023.md
+++ b/content/en/news/5. trancedance23january2023.md
@@ -1,7 +1,7 @@
 ---
 title: 'Trance Dance January 23'
 desc: On January 23 we start with the first of a series of monthly Trance Dance sessions at vzw Dwarsligger in Melle
-date: 01-13-2023
+date: 01/13/2023
 author: Wouter Vernaillen
 image: /images/fbevent-cover2.jpeg
 imageWidth: 765px
