--- a/content/news/1. watisecstaticdance.md
+++ b/content/news/1. watisecstaticdance.md
@@ -1,7 +1,7 @@
 ---
 title: Wat is Ecstatic Dance?
 desc: een dansvorm waarin de dansers zich volledig overgeven aan het ritme van de muziek en vrij bewegen...
-date: 07-18-2022
+date: 07/18/2022
 author: Wouter Vernaillen
 thumb_video_webm: /images/blog/ed.webm
 thumb_video_mp4: /images/blog/ed.mp4
