--- a/content/news/4. foli.md
+++ b/content/news/4. foli.md
@@ -1,7 +1,7 @@
 ---
 title: Foli - er is geen beweging zonder ritme
 desc: Het leven heeft een ritme, het is constant in beweging. Het woord voor ritme (gebruikt door de Malinke-stammen) is FOLI.
-date: 09-08-2022
+date: 09/08/2022
 author: Wouter Vernaillen
 thumbnail: /images/blog/foli.png
 ---
