--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -36,7 +36,9 @@
     },
     "footer": {
         "findus": "You can find us on any of these platforms.",
-        "copyright": "Copyright ©"
+        "copyright": "©",
+        "built_at": "built {0}",
+        "fetchingBuildinfo": "fetching build info..."
     },
     "mailinglist": {
         "title": "Receive Harmonics news by email",
@@ -48,5 +50,37 @@
         "published": "published on",
         "lastUpdated": "last edited on"
     },
-    "tickets": "Tickets"
+    "tickets": "Tickets",
+    "time_ago_options": {
+        "day_future": "in 0 days|tomorrow|in {n} days",
+        "day_past": "0 days ago|yesterday|{n} days ago",
+        "hour_future": "in 0 hours|in 1 hour|in {n} hours",
+        "hour_past": "0 hours ago|1 hour ago|{n} hours ago",
+        "just_now": "just now",
+        "minute_future": "in 0 minutes|in 1 minute|in {n} minutes",
+        "minute_past": "0 minutes ago|1 minute ago|{n} minutes ago",
+        "month_future": "in 0 months|next month|in {n} months",
+        "month_past": "0 months ago|last month|{n} months ago",
+        "second_future": "just now|in {n} second|in {n} seconds",
+        "second_past": "just now|{n} second ago|{n} seconds ago",
+        "short_day_future": "in {n}d",
+        "short_day_past": "{n}d",
+        "short_hour_future": "in {n}h",
+        "short_hour_past": "{n}h",
+        "short_minute_future": "in {n}min",
+        "short_minute_past": "{n}min",
+        "short_month_future": "in {n}mo",
+        "short_month_past": "{n}mo",
+        "short_second_future": "in {n}s",
+        "short_second_past": "{n}s",
+        "short_week_future": "in {n}w",
+        "short_week_past": "{n}w",
+        "short_year_future": "in {n}y",
+        "short_year_past": "{n}y",
+        "week_future": "in 0 weeks|next week|in {n} weeks",
+        "week_past": "0 weeks ago|last week|{n} weeks ago",
+        "year_future": "in 0 years|next year|in {n} years",
+        "year_past": "0 years ago|last year|{n} years ago"
+    }
 }
+
