trancedance music blogpost

--- a/content/en/news/3. releaseyourinnerdancer.md
+++ b/content/en/news/3. releaseyourinnerdancer.md
@@ -8,8 +8,8 @@ image: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 imageSizes: sm:100vw xl:1600px
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
-**Edit:** This event is over.
-You can listen here to the recorded DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)
+**Edit:** *This event is over.*
+*You can listen here to the recorded DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)*
 
 ### Let's dance together on September 3rd
 
