--- a/content/news/3. releaseyourinnerdancer.md
+++ b/content/news/3. releaseyourinnerdancer.md
@@ -9,8 +9,8 @@ imageSizes: sm:100vw xl:1600px
 thumbnail: /images/blog/releaseyourinnerdancer/simon-wilkes-m3IxlGqG3dk-unsplash.png
 ---
 
-**Edit:** dit evenement is reeds voorbij.
-Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)
+***Edit:*** *dit evenement is reeds voorbij.*
+*Je kan hier luisteren naar de opgenomen DJ-set: [Release your Inner Dancer 🌿 Ecstatic Dance @ Krimpvarkie Huisi Haaltert](https://soundcloud.com/woutervernaillen/release-your-inner-dancer-ecstatic-dance)*
 
 ### Laat ons samen dansen op 3 september
 
