--- a/content/news/5. trancedance23january2023.md
+++ b/content/news/5. trancedance23january2023.md
@@ -7,6 +7,8 @@ image: /images/fbevent-cover2.jpeg
 imageWidth: 765px
 thumbnail: /images/fbevent-cover2.jpeg
 ---
+***Edit:*** *dit evenement is intussen voorbij.*
+*Je kan hier luisteren naar de muziek die tijdens deze sessie gebruikt werd: [Trancedans Muziek](/news/trancedancemusic)*
 
 Op 23 januari nodigen we jullie graag uit om je intenties voor 2023 al dansend kracht bij te zetten tijdens een [Trancedans](/trancedance) sessie bij [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) te Melle. 
 Dit is de eerste in een reeks van maandelijkse sessies en belooft een mooie co-creatie te worden door Rita en Wouter, die samen de [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) volgden bij Aernoudt Knecht in Duitsland.
