--- a/content/en/news/6. trancedancemusic.md
+++ b/content/en/news/6. trancedancemusic.md
@@ -4,6 +4,7 @@ desc: Are you new to trancedance and curious what music we dance on during a tra
 date: 02/05/2023
 author: Wouter Vernaillen
 thumbnail: /images/trancedance/trancedancemusic-23jan23.png
+ogImage: /images/trancedance/trancedancemusic-23jan23-opengraph.png
 ---
 
 Are you new to trancedance and curious what music we dance on during a trancedance session? 
