--- a/content/news/6. trancedancemusic.md
+++ b/content/news/6. trancedancemusic.md
@@ -4,6 +4,7 @@ desc: Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop geda
 date: 02/05/2023
 author: Wouter Vernaillen
 thumbnail: /images/trancedance/trancedancemusic-23jan23.png
+ogImage: /images/trancedance/trancedancemusic-23jan23-opengraph.png
 ---
 
 Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop gedanst wordt bij zo’n trancedans sessie? 
