TD content update

--- a/content/en/news/5. trancedance23january2023.md
+++ b/content/en/news/5. trancedance23january2023.md
@@ -8,7 +8,7 @@ imageWidth: 765px
 thumbnail: /images/fbevent-cover2.jpeg
 ---
 ***Edit:*** *This event is now over.*
-*You can listen here to the music that was used for this session: [Trancedans Muziek](/news/trancedancemusic)*
+*You can listen here to the music that was used for this session: [Trancedans Muziek](/en/news/trancedancemusic)*
 
 On January 23, we would like to invite you to strengthen your intentions for 2023 while dancing during a [Trance Dance](/en/trancedance) session at [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) in Melle.
 This session is the first in a series of monthly sessions and promises to be a beautiful co-creation of Rita and Wouter, who both followed the [Trance Dance Facilitator Training](https://trance-dance.net/events/trancedance-facilitator-training/) by Aernoudt Knecht in Germany.
