--- a/content/en/news/6. trancedancemusic.md
+++ b/content/en/news/6. trancedancemusic.md
@@ -10,7 +10,8 @@ ogImage: /images/trancedance/trancedancemusic-23jan23-opengraph.png
 Are you new to trancedance and curious what music we dance on during a trancedance session? 
 Or maybe you do have trancedance experience but would love to know how a Harmonics trancedance session sounds like?
 
-You can listen below to the music from the trancedance session of 23 January 2023. You can also find the [set on SoundCloud](https://soundcloud.com/woutervernaillen/trancedance-23january2023).
+You can listen below to the music from the trancedance session of 23 January 2023. (or [on SoundCloud](https://soundcloud.com/woutervernaillen/trancedance-23january2023)).
+Info about trancedans can be found on our [trancedance page](/en/trancedance).
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1431928744%3Fsecret_token%3Ds-AtVbYmPYHWz&color=%23bfac22&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/woutervernaillen" title="Wouter Vernaillen" target="_blank" style="color: #cccccc; text-decoration: none;">Wouter Vernaillen</a> · <a href="https://soundcloud.com/woutervernaillen/trancedance-23january2023/s-AtVbYmPYHWz" title="TranceDance 23 January 2023" target="_blank" style="color: #cccccc; text-decoration: none;">TranceDance 23 January 2023</a></div>
 
