--- a/content/news/6. trancedancemusic.md
+++ b/content/news/6. trancedancemusic.md
@@ -10,8 +10,8 @@ ogImage: /images/trancedance/trancedancemusic-23jan23-opengraph.png
 Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop gedanst wordt bij zo’n trancedans sessie? 
 Of misschien heb je wel al ervaring met trancedans en wil je graag weten ontdekken hoe de muziek van een sessie bij Harmonics klinkt?
 
-De muziek van de trancedans sessie van 23 januari 2023 kan je hieronder beluisteren. Je kan hier ook de [set op SoundCloud](https://soundcloud.com/woutervernaillen/trancedance-23january2023) beluisteren.
-
+De muziek van de trancedans sessie van 23 januari 2023 kan je hieronder beluisteren (of [op SoundCloud](https://soundcloud.com/woutervernaillen/trancedance-23january2023)). 
+Meer info over trancedans kan je vinden op onze [trancedans pagina](/trancedance).
 
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1431928744%3Fsecret_token%3Ds-AtVbYmPYHWz&color=%23bfac22&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/woutervernaillen" title="Wouter Vernaillen" target="_blank" style="color: #cccccc; text-decoration: none;">Wouter Vernaillen</a> · <a href="https://soundcloud.com/woutervernaillen/trancedance-23january2023/s-AtVbYmPYHWz" title="TranceDance 23 January 2023" target="_blank" style="color: #cccccc; text-decoration: none;">TranceDance 23 January 2023</a></div>
 
