trying to fix 404 fetch + more shadow for politePopup

--- a/content/en/news/3. releaseyourinnerdancer.md
+++ b/content/en/news/3. releaseyourinnerdancer.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Release your Inner Dancer - September 3
 desc: When did you last dance barefoot in the grass in nature? Release your inner child and dance with us on September 3rd in Haaltert
 subtitle: When was the last time you danced barefoot in the grass in nature?
