--- a/content/news/1. watisecstaticdance.md
+++ b/content/news/1. watisecstaticdance.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Wat is Ecstatic Dance?
 desc: een dansvorm waarin de dansers zich volledig overgeven aan het ritme van de muziek en vrij bewegen...
 date: 07/18/2022
