--- a/content/news/3. releaseyourinnerdancer.md
+++ b/content/news/3. releaseyourinnerdancer.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Release your Inner Dancer - 3 september '22
 desc: Wanneer danste je laatst op blote voeten in het gras in de natuur?  Laat je innerlijke kind vrij en dans met ons mee op 3 september in Haaltert
 subtitle: Wanneer danste je laatst op blote voeten in het gras in de natuur?
