--- a/content/news/5. trancedance23january2023.md
+++ b/content/news/5. trancedance23january2023.md
@@ -1,4 +1,5 @@
 --- 
+news: true
 title: Trancedans 23 januari
 desc: Op 23 januari starten we met de eerste van een reeks maandelijkse Trancedans sessies bij vzw Dwarsligger in Melle
 date: 01/13/2023
