--- a/content/news/6. trancedancemusic.md
+++ b/content/news/6. trancedancemusic.md
@@ -1,4 +1,5 @@
 --- 
+news: true
 title: Trancedans Muziek
 desc: Is trancedans nieuw voor jou en ben je benieuwd naar de muziek waarop gedanst wordt bij zo’n trancedans sessie? Of misschien heb je wel al ervaring met trancedans en wil je graag weten ontdekken hoe de muziek van een sessie bij Harmonics klinkt?
 date: 02/05/2023
