--- a/content/en/news/1. watisecstaticdance.md
+++ b/content/en/news/1. watisecstaticdance.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: What is Ecstatic Dance?
 desc: a form of dance in which the dancers abandon themselves to the rhythm and move freely, as the music leads them...
 date: 07/18/2022
