--- a/content/en/news/2. rebirthecstaticdance.md
+++ b/content/en/news/2. rebirthecstaticdance.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Rebirth Ecstatic Dance
 desc: recording of an Ecstatic Dance DJ-set played during a private birthday/rebirth event
 date: 07/21/2022
