--- a/content/en/news/4. foli.md
+++ b/content/en/news/4. foli.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Foli - there is no movement without rhythm
 desc: Life has a rhythm, it’s constantly moving. The word for rhythm ( used by the Malinke tribes ) is FOLI.
 date: 09/08/2022
