--- a/content/en/news/6. trancedancemusic.md
+++ b/content/en/news/6. trancedancemusic.md
@@ -1,4 +1,5 @@
 --- 
+news: true
 title: Trance Dance Music
 desc: Are you new to trancedance and curious what music we dance on during a trancedance session? Or maybe you do have some trancedance experience but would love to know how a Harmonics trancedance session sounds like?
 date: 02/05/2023
