--- a/content/news/2. rebirthecstaticdance.md
+++ b/content/news/2. rebirthecstaticdance.md
@@ -1,4 +1,5 @@
 ---
+news: true
 title: Rebirth Ecstatic Dance
 desc: opname van een Ecstatic Dance DJ-set gespeeld tijdens een privé verjaardags/rebirth evenement
 date: 07/21/2022
