TD draft update

--- a/content/drafts/7. trancedance20february2023.md
+++ b/content/drafts/7. trancedance20february2023.md
@@ -10,10 +10,6 @@ thumbnail: /images/news/trancedance20february2023/event-cover-20februari.png
 
 Op 20 februari nodigen we jullie graag opnieuw uit voor een [Trancedans](/trancedance) sessie bij [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) te Melle. 
 
-Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
-
-## Karien 'Iztacitlal'
-
 Nieuw voor deze sessie is de co-creatie met [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie). Karien begeleid als sjamanistisch healer reeds 16 jaar groepen en cirkels, en organiseert zweethut ceremonies. 
 Meer info over het aanbod van Karien kan je vinden op haar website [Shamanour](https://www.shamanour.be/).
 Karien zal de opening- en closing-cirkel begeleiden.
@@ -27,9 +23,9 @@ caption: picture by Midjourney
 imageShadow: true
 ---
 ::
-## Thema: Mogen Zijn
-Het thema voor deze sessie is 'Mogen Zijn'. 
-We hoeven niet altijd alles proberen los te laten. Aanvaarding en gewoon laten zijn is soms essentieel. 
+## Mogen Zijn
+Het thema voor deze trancedans sessie is 'Mogen Zijn'. 
+We hoeven niet altijd alles proberen los te laten, of te negeren. Aanvaarding en gewoon laten zijn is soms essentieel.
 Ook gewoon mogen zijn wie je bent, inclusief de mooie en minder mooie aspecten.
 
 ## Inschrijvingen
@@ -38,6 +34,9 @@ Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.c
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de [Harmonics nieuwsbrief](/news).
 
 Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulier](/contact) of via WhatsApp :WhatsAppLink
+
+Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
+
 
 ## Programma 20 februari
 * welkom vanaf 18u45
