--- a/content/drafts/7. trancedance20february2023.md
+++ b/content/drafts/7. trancedance20february2023.md
@@ -11,8 +11,14 @@ thumbnail: /images/news/trancedance20february2023/event-cover-20februari.png
 Op 20 februari nodigen we jullie graag opnieuw uit voor een [Trancedans](/trancedance) sessie bij [vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans) te Melle. 
 
 Nieuw voor deze sessie is de co-creatie met [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie). Karien begeleid als sjamanistisch healer reeds 16 jaar groepen en cirkels, en organiseert zweethut ceremonies. 
-Meer info over het aanbod van Karien kan je vinden op haar website [Shamanour](https://www.shamanour.be/).
 Karien zal de opening- en closing-cirkel begeleiden.
+
+Meer info over het aanbod van Karien kan je vinden op haar website [Shamanour](https://www.shamanour.be/).
+
+## Laten zijn / Mogen zijn
+Het thema voor deze trancedans sessie is *Laten zijn*. 
+We hoeven niet altijd alles proberen los te laten, of te negeren. Aanvaarding en gewoon laten zijn is vaak de sleutel.
+Ook gewoon *mogen zijn* wie je bent, inclusief de mooie en minder mooie aspecten.
 
 ::FloatingImage
 ---
@@ -23,11 +29,6 @@ caption: picture by Midjourney
 imageShadow: true
 ---
 ::
-## Mogen Zijn
-Het thema voor deze trancedans sessie is 'Mogen Zijn'. 
-We hoeven niet altijd alles proberen los te laten, of te negeren. Aanvaarding en gewoon laten zijn is soms essentieel.
-Ook gewoon mogen zijn wie je bent, inclusief de mooie en minder mooie aspecten.
-
 ## Inschrijvingen
 Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.com/event-details/trancedans-2/form). Let op, de plaatsen zijn beperkt, dus schrijf je tijdig in.
 :ButtonLink{text='Reserveer je plek' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
