TD draft update 3

--- a/content/drafts/7. trancedance20february2023.md
+++ b/content/drafts/7. trancedance20february2023.md
@@ -12,13 +12,11 @@ Op 20 februari nodigen we jullie graag opnieuw uit voor een [Trancedans](/trance
 
 Nieuw voor deze sessie is de co-creatie met [Karien 'Iztacitlal' Detavernier](https://www.shamanour.be/autobiografie). Karien begeleid als sjamanistisch healer reeds 16 jaar groepen en cirkels, en organiseert zweethut ceremonies. 
 Karien zal de opening- en closing-cirkel begeleiden.
-
 Meer info over het aanbod van Karien kan je vinden op haar website [Shamanour](https://www.shamanour.be/).
 
-## Laten zijn / Mogen zijn
-Het thema voor deze trancedans sessie is *Laten zijn*. 
-We hoeven niet altijd alles proberen los te laten, of te negeren. Aanvaarding en gewoon laten zijn is vaak de sleutel.
-Ook gewoon *mogen zijn* wie je bent, inclusief de mooie en minder mooie aspecten.
+## Laten zijn
+Het thema voor deze trancedans sessie is *Laten zijn*. We hoeven niet altijd alles proberen los te laten, weg te duwen of te negeren. Aanvaarding en gewoon laten zijn is vaak de sleutel.
+Ook gewoon *mogen zijn* wie je bent. :Icon{name=mdi:cards-heart-outline}
 
 ::FloatingImage
 ---
@@ -34,9 +32,14 @@ Inschrijven kan via de [website van vzw Dwarsligger](https://www.dwarsligger33.c
 :ButtonLink{text='Reserveer je plek' src=https://www.dwarsligger33.com/event-details/trancedans-2/form extraClass='mt-[-20px] inline-block'}
 Kan je er deze keer niet bij zijn, maar blijf je graag op de hoogte van volgende sessies, schrijf je dan in op de [Harmonics nieuwsbrief](/news).
 
-Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulier](/contact) of via WhatsApp :WhatsAppLink
+## Wat is Trancedans?
 
 Is Trancedans nieuw voor jou?  Neem dan gerust een kijkje op onze [Trancedans pagina](/trancedance).
+
+Benieuwd naar de muziek? Op de pagina [Trancedans Muziek](/news/trancedancemusic) kan je luisteren naar de muziek van de vorige sessie.
+Voor elke sessie wordt telkens andere muziek gebruikt. Voor deze sessie op 20 februari wordt de muziek geselecteerd op basis van het thema *Laten zijn*
+
+Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulier](/contact) of via WhatsApp :WhatsAppLink
 
 
 ## Programma 20 februari
