news item Trance Dance 20 Feb

--- a/content/en/news/5. trancedance23january2023.md
+++ b/content/en/news/5. trancedance23january2023.md
@@ -45,7 +45,7 @@ imageShadow: false
 * bottle of water
 * possibly pen and paper to write down your experiences after the dance
 
-## Locatie
+## Location
 
 [vzw Dwarsligger](https://www.dwarsligger33.com/)
 Gontrode Heirweg 141
