--- a/content/news/7. trancedance20february2023.md
+++ b/content/news/7. trancedance20february2023.md
@@ -61,5 +61,5 @@ Voor vragen kan je uiteraard steeds terecht bij Wouter via het [contact formulie
 [vzw Dwarsligger](https://www.dwarsligger33.com/)
 Gontrode Heirweg 141
 9090 Melle, België
-[google maps](https://goo.gl/maps/MnNE7r2AvZPsRXsK9)
+[:Icon{name=logos:google-maps} google maps](https://goo.gl/maps/MnNE7r2AvZPsRXsK9)
 (best 'vzw Dwarsligger' intikken in de gps)
